--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -56,7 +56,7 @@
             }
         }
     }
-}
+} 
 
 /* tablet screen */
 
@@ -112,4 +112,16 @@
             }
         }
     }
-}
+} 
+
+  /* .options_ul{
+            display: flex;
+            align-items: center;
+            padding: 8px;
+            gap: 32px;
+            a{
+                text-decoration: none;
+                color: var(--marinho)
+            }
+        } */
+    
